# sentiment-detection

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.md  requirements.txt  techstack.md
data/: 100_sample.csv  sample_feedback.csv
src/: cli.py
src/conversation/: qa.py
src/sentiment_miner/: __init__.py  config.py  io_handlers.py  main.py  pipeline.py  signatures.py
